vm1-openvpn-wireguard/iptables/rules.v4
-A INPUT -i lo -j ACCEPT
-A INPUT -i wg0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i lo -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wg0 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 10.10.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -s 10.10.0.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.10.0.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 10.10.0.1/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -i tun0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j DROP
-A INPUT -s 203.x.x.x/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i tun0 -o wg0 -j ACCEPT
-A FORWARD -i wg0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d 10.10.0.0/24 -o wg0 -j MASQUERADE
